# finch-tensor-lite

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pixi.toml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/finch/: __init__.py
src/finch/algebra/: __init__.py  algebra.py  operator.py  tensor.py
src/finch/autoschedule/: __init__.py  _utils.py  compiler.py  executor.py  optimize.py
src/finch/codegen/: __init__.py  c.py  numba_backend.py  numpy_buffer.py
src/finch/compile/: __init__.py  bufferized_ndarray.py  looplets.py  lower.py
src/finch/finch_assembly/: __init__.py  abstract_buffer.py  buffer.py  interpreter.py  logger.py  nodes.py  printer.py  struct.py
src/finch/finch_logic/: __init__.py  _utils.py  interpreter.py  nodes.py  printer.py
src/finch/finch_notation/: __init__.py  interpreter.py  nodes.py  printer.py
src/finch/galley/: __init__.py  dense_stat.py  tensor_def.py  tensor_stats.py
src/finch/interface/: __init__.py  eager.py  fuse.py  lazy.py  overrides.py  (+2 more)
tests/: conftest.py  test_algebra.py  test_assembly_interpreter.py  test_codegen.py  test_galley.py  test_interface.py  test_issues.py  test_lazy_statisticals.py  test_logic_compiler.py  test_logic_interpreter.py  test_notation_compiler.py  test_notation_interpreter.py  test_printers.py  test_reduce_api_funcs.py  test_regressions.py  test_scheduler.py  test_starter.py  test_tensor.py  test_utils.py
tests/printer/: test_asm_printer.py  test_log_printer.py  test_ntn_printer.py
tests/reference/: test_asm_printer_dot.txt  test_asm_printer_if.txt  test_c_program.c  test_dot_product_regression_compiler0__c_NumpyBuffer_.c  test_dot_product_regression_compiler1__py_NumpyBuffer_.py  test_log_printer.txt  test_ntn_printer.txt  test_tree_regression.txt
(+18 files in other folders)
