[project]
name = "finch-tensor-lite"
description = ""
version = "0.1.0"
readme = "README.md"
authors = [{name = "Willow Ahrens", email = "willow.marie.ahrens@gmail.com"}]
requires-python = '>=3.11,<4.0'
dependencies = ['numpy (>=1.19)']

[tool.poetry]
packages = [{include = "finch", from = "src"}]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"
pytest-cov = "^4.1.0"
sparse = "^0.16.0"
scipy = "^1.7"
numba = "^0.61.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP", "YTT", "BLE", "C4", "T10", "ISC", "ICN", "PIE", "PYI", "RSE", "RET", "SIM", "PGH", "FLY", "NPY", "PERF"]

[tool.ruff.lint.isort.sections]
numpy = ["numpy", "numpy.*", "scipy", "scipy.*"]
pytest = ["pytest", "pytest.*"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "pytest",
    "numpy",
    "third-party",
    "first-party",
    "local-folder",
]
